ボタンイベント追加

--- a/iOSTraining1.3/UIViewController/UIViewController/MixiSampleViewController.xib
+++ b/iOSTraining1.3/UIViewController/UIViewController/MixiSampleViewController.xib
@@ -7,14 +7,59 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MixiSampleViewController">
             <connections>
+                <outlet property="deleteView" destination="HlN-Km-zth" id="Zf5-J2-7M2"/>
+                <outlet property="pinkOver" destination="g0B-Pv-rES" id="ipI-vN-d12"/>
+                <outlet property="pinkUnder" destination="wsj-Dg-lyP" id="Vub-Rs-Ie0"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="yellowUnder" destination="kc2-HE-bJJ" id="Ioc-wR-yVu"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wsj-Dg-lyP">
+                    <rect key="frame" x="23" y="44" width="280" height="251"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g0B-Pv-rES">
+                            <rect key="frame" x="20" y="62" width="240" height="128"/>
+                            <color key="backgroundColor" red="1" green="0.54278936609271755" blue="0.87000691507968753" alpha="1" colorSpace="calibratedRGB"/>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" red="1" green="0.71794336910462331" blue="0.91857133265968138" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="tintColor" red="1" green="0.39361941475486861" blue="0.39020332278032877" alpha="1" colorSpace="calibratedRGB"/>
+                </view>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kc2-HE-bJJ">
+                    <rect key="frame" x="23" y="362" width="280" height="159"/>
+                    <color key="backgroundColor" red="1" green="0.95013527605184545" blue="0.60653842838556526" alpha="1" colorSpace="calibratedRGB"/>
+                </view>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bcH-U0-hxD">
+                    <rect key="frame" x="23" y="543" width="46" height="30"/>
+                    <state key="normal" title="Button"/>
+                    <connections>
+                        <action selector="createView:" destination="-1" eventType="touchUpInside" id="v2L-Ci-NEU"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HlN-Km-zth">
+                    <rect key="frame" x="257" y="543" width="46" height="30"/>
+                    <state key="normal" title="Button"/>
+                    <connections>
+                        <action selector="deleteView:" destination="-1" eventType="touchUpInside" id="MgE-W2-z86"/>
+                    </connections>
+                </button>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <point key="canvasLocation" x="413" y="447"/>
         </view>
+        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" id="M3z-Wz-grT">
+            <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+        </activityIndicatorView>
+        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="dhM-fs-kfB">
+            <rect key="frame" x="0.0" y="0.0" width="46" height="30"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <state key="normal" title="Button"/>
+        </button>
     </objects>
 </document>
