--- a/iOSTraining4.3/custom/TableViewCell.xib
+++ b/iOSTraining4.3/custom/TableViewCell.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1808" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TableViewCell">
@@ -11,9 +12,32 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="125"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ia3-Ga-zqn">
+                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </tableView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3HA-ui-u1M">
+                    <rect key="frame" x="0.0" y="41" width="87" height="87"/>
+                    <string key="image">68747470733a2f2f7261772e6769746875622e636f6d2f6d6978692d696e632f694f53547261696e696e672f6d61737465722f53616d706c6550726f6a656374732f342e332f5461626c655669657753616d706c652f5461626c655669657753616d706c652f6d61696d61692e6a7067.jpeg</string>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nDi-E9-Nu5">
+                    <rect key="frame" x="85" y="-1" width="240" height="128"/>
+                    <string key="image">68747470733a2f2f7261772e6769746875622e636f6d2f6d6978692d696e632f694f53547261696e696e672f6d61737465722f53616d706c6550726f6a656374732f342e332f5461626c655669657753616d706c652f5461626c655669657753616d706c652f66756b6964617368695f6c6566742e706e67.png</string>
+                </imageView>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
         </view>
     </objects>
+    <resources>
+        <image width="133" height="144">
+            <string key="name">68747470733a2f2f7261772e6769746875622e636f6d2f6d6978692d696e632f694f53547261696e696e672f6d61737465722f53616d706c6550726f6a656374732f342e332f5461626c655669657753616d706c652f5461626c655669657753616d706c652f66756b6964617368695f6c6566742e706e67.png</string>
+        </image>
+        <image width="180" height="180">
+            <string key="name">68747470733a2f2f7261772e6769746875622e636f6d2f6d6978692d696e632f694f53547261696e696e672f6d61737465722f53616d706c6550726f6a656374732f342e332f5461626c655669657753616d706c652f5461626c655669657753616d706c652f6d61696d61692e6a7067.jpeg</string>
+        </image>
+    </resources>
 </document>
